# RheoQCM

./: .gitignore  .graphifyignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
QCMFuncs/: QCM_functions.py
docs/: Makefile  QCM.bib  requirements.txt
docs/adr/: 001-qcmapp-decomposition.md
docs/legacy/: migration.md
docs/source/: changelog.md  conf.py  getting-started.md  index.rst  overview.md
docs/source/_static/: qcm_summary.py
docs/source/api/: index.rst
docs/source/references/: bibliography.md  figures.md  index.md  qcm-notes.md  qcm-summary.md
docs/source/theory/: index.md  numerical-methods.md  qcm-fundamentals.md
docs/source/tutorials/: analysis-workflows.md  batch-analysis.md  installation.md  quickstart.md  scripting-basics.md
docs/source/user-guide/: custom-scripts.md  data-acquisition.md  data-import.md  ui-workflow.md
example/: BCB_analyze.py
rheoQCM/: MainWindow.py  rheoQCM.py
rheoQCM/core/: __init__.py  analysis.py  jax_config.py  model.py  multilayer.py  physics.py
rheoQCM/modules/: AccessMyVNA.py  DataSaver.py  PeakTracker.py  QCM.py  TempDevices.py
specs/012-jax-performance-optimization/: checklist.md  spec.md
src/QCMFuncs/: DMA_functions.py  QCM_functions.py  __init__.py  fatigue_functions.py
src/UI/: QCM_GUI.ui  UI_source.qrc
src/example/: BCB_analyze.py  example_DataSaver.py  gui_components_demo.py
src/rheoQCM/: MainWindow.py  UISettings.py  UI_source_rc.py  __init__.py  _version.py  device.py  lazy_imports.py  logging_config.py  main.py  rheoQCM.py
src/rheoQCM/core/: __init__.py  analysis.py  bayesian.py  constants.py  jax_config.py  model.py  multilayer.py  physics.py  signal.py  uncertainty.py  validation.py
src/rheoQCM/gui/: __init__.py  components.py  dialogs.py  layouts.py  styles.py  workers.py
src/rheoQCM/io/: __init__.py  data_store.py  hdf5_handler.py
src/rheoQCM/modules/: AccessMyVNA.py  DataSaver.py  MatplotlibWidget.py  PeakTracker.py  QCM.py  TempModules.py  UIModules.py  __init__.py  matplotlibplugin.py
src/rheoQCM/services/: __init__.py  base.py  bayesian.py  plotting.py  settings.py  theming.py
tests/: MainWindow.py  UI_source_rc.py  _version.py  conftest.py  rheoQCM.py  test_pyqt6_migration.py
tests/benchmark/: test_jax_performance.py
tests/benchmarks/: benchmark_baseline.py  test_jit_speedup.py  test_memory_baseline.py
tests/core/: test_analysis.py  test_integration.py  test_model.py  test_multilayer.py  test_physics.py  test_signal.py  test_ui_wrapper.py
tests/gui/: test_bayesian_gui.py  test_pyqt6.py  test_worker_lifecycle.py
tests/integration/: test_kotula_benchmark.py  test_numerical_accuracy.py  test_parity.py  test_uncertainty_workflow.py  test_workflows.py
tests/modules/: MatplotlibWidget.py  matplotlibplugin.py  test_datasaver.py  test_datasaver_migration.py  test_peaktracker.py  test_qcm_wrapper.py
tests/unit/: test_bayesian.py  test_custom_calctype.py  test_edge_cases.py  test_kotula.py  test_scipy_parity.py  test_validation.py
tests/unit/test_io/: test_excel_handler.py
tests/unit/test_services/: test_default_services.py  test_export_service.py  test_hardware_service.py  test_theming.py
